Collect-TV-20180201/src/objects/TNET_Announcements__c.object
<CustomObject>
    <fields>
        <fullName>TNET_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TNET_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TNET_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNET_Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TNET_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>TNET Announcement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TNET_Description__c</columns>
        <columns>TNET_Start_Date__c</columns>
        <columns>TNET_End_Date__c</columns>
        <columns>TNET_Is_Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>TNET Announcements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>